--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@
   to {background-color: #fff2d5;};
 }
 
+@keyframes textBubble {
+	0% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
 @keyframes anim_slide_in {
 	0% {
 		opacity: 0;
@@ -56,6 +68,33 @@ html {
 }
 
 .title{
+  text-align: center;
+  font-family: 'Pacifico', cursive;
+  animation: anim_slide_in 2s ease 0s 1 normal forwards;
+}
+
+.instagram{
+  animation: anim_slide_in 2s ease 1s 1 normal forwards;
+  opacity: 0;
+  width:fit-content;
+  margin: auto;
+}
+
+.popup-content{
+  background-color: #ffb5af;
+  width: 40%;
+  height: 10%;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  font-family: 'Source Sans Pro', sans-serif;
+  opacity: 0;
+  animation: textBubble 1.5s ease 3s 1 normal forwards;
+}
+
+.con_title{
   text-align: center;
   font-family: 'Pacifico', cursive;
   animation: anim_slide_in 2s ease 0s 1 normal forwards;
