--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
 @keyframes topbar_in{
-  from {background-color: #ffb5af; opacity: 0;}
-  to {background-color: #fff2d5; opacity: 100;};
+  from {background-color: #ffb5af;}
+  to {background-color: #fff2d5;};
+}
+
+@keyframes textBubble {
+	0% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
 
 @keyframes anim_slide_in {
@@ -56,69 +68,33 @@ html {
 }
 
 .title{
-  margin: auto;
-  margin-top: 20%;
-  width: max-content;
-  padding-left: 30px;
-  padding-right: 30px;
-  border: 3px #333 solid;
   text-align: center;
   font-family: 'Pacifico', cursive;
   animation: anim_slide_in 2s ease 0s 1 normal forwards;
-}
-
-.con_title{
-  text-align: center;
-  font-family: 'Pacifico', cursive;
-  animation: anim_slide_in 2s ease 0s 1 normal forwards;
-}
-
-.forms{
-  margin: auto;
-  height: 80%;
-  min-width: min-content;
-  max-width: fit-content;
-  background-color: white;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 15px;
-  padding-bottom: 45px;
-  margin-top: 5%;
-  text-align: center;
-  border-radius: 25px;
-}
-
-.forms-box>p3{
-  float: left;
-  padding-bottom: -5%;
-  font-family: 'Roboto', sans-serif;
-}
-
-.submit{
-  margin-top: 5%;
-  padding: 15px;
-  padding-left: 15%;
-  padding-right: 15%;
-  border: none;
-  background-color: #ffb5af;
-  border-radius: 10px;
-  color: black;
-}
-
-.con_title>svg:hover{
-  fill: #ffb5af;
-}
-
-.con_title>img:hover{
-  fill: #ffb5af;
 }
 
 .instagram{
+  animation: anim_slide_in 2s ease 1s 1 normal forwards;
+  opacity: 0;
+  width:fit-content;
   margin: auto;
-  margin-top: 0.5%;
-  width: max-content;
-  padding-left: 30px;
-  padding-right: 30px;
+}
+
+.popup-content{
+  background-color: #ffb5af;
+  width: 40%;
+  height: 10%;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  font-family: 'Source Sans Pro', sans-serif;
+  opacity: 0;
+  animation: textBubble 1.5s ease 3s 1 normal forwards;
+}
+
+.con_title{
   text-align: center;
   font-family: 'Pacifico', cursive;
   animation: anim_slide_in 2s ease 0s 1 normal forwards;
